clusters/lewis-sampson/stawars-app/resources/sw_l3_l4_l7_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "L3-L4 policy to restrict deathstar access to empire ships only. 
                L7 policy to restrict access to specific HTTP call"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  # This part is the Layer 3/4 policy restriction
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      # This part is the Layer 7 policy restriction
      rules:
        http:
        - method: "POST"
          path: "/v1/request-landing"
